--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -16,7 +16,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         VERSION=$(git rev-parse HEAD)
-        gh release create 1.0.0
+        gh release create $VERSION
   Build_release:
     needs: Pre_release
     strategy:
