--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "electron-publisher-s3": "^20.17.2",
     "electron-reloader": "^1.2.0",
     "lerna": "^3.22.1",
-    "ncp": "^2.0.0"
+    "ncp": "^2.0.0",
+    "npm-run-all": "^4.1.5"
   }
 }
